# modmanager

./: .gitignore  CHANGELOG  COMPLETION_SUMMARY.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TEST_MATRIX.md  pyproject.toml  test_wsl_crossover.py
cli-hmi/: DEMO_GUIDE.md  README_SHORT.md  demo.py  rule_aggregator.py  run.py  smoke_test.py  test_runner.py  visualize_interactive.py
description/: README.md  TODO.md  aggregated_rule_set.json.example  backupinfo.json.example  database.json.example  filemappingforest.json.example  gui_description.md  kmm_rule_RWR-khn_CT-castears-z2414_Replace.json.example  process_description.md  user_config.json.example  workflow_restrict.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
repo_bkgd/: MOD统一的TimeStamp如何拿到.md  README.md  SVG_PAN_ZOOM.md
repo_logs/: 2026-04-21_IMPLEMENTATION_BRIEF.md  2026-04-21_doc_contract_snapshot.md  2026-04-22_FOREST_VISUALIZATION_DESIGN.md  2026-04-29_DEMO_M1_IMPLEMENTATION_SUMMARY.md  2026-04-30.md  2026-05-06.md  2026-05-08.md  2026-05-08_TASKLIST_ARCHIVE.md  2026-05-09.md  2026-05-10.md  2026-05-13.md  2026-05-14_after_audit.md  2026-05-14_ask_to_audit.md  2026-05-14_audit_answers.md  2026-05-14_audit_todo_future_archived.md  2026-05-14_before_audit.md  2026-05-14_decisions.md  2026-05-16_UX_POLISH_AND_BUGFIX.md  2026-05-16_WORKSPACE_DEFINE_DESIGN_IMPLEMENT.md  2026-05-16_finish_audit20260514.md  2026-05-17_directory_rename_notes.md  2026-05-17_directory_rename_worklogs.md  2026-05-17_ui_improvement.md  2026-05-18_PLAN_dry_run_output_spec.md  2026-05-18_PLAN_engine_ws_separation.md  2026-05-18_PLAN_path_to_dir_rename.md  2026-05-18_operations_workspace_backup_engine_refactor.md  2026-05-19_DOC_GOVERNANCE_FINAL_AUDIT.md  2026-05-20_CONSTRUCTION_schema_completion.md  2026-05-21.md  2026-05-22.md  2026-05-31_DECISION_PLAN_RETIREMENT.md  DOC_ARCHIVE_2026-05-19_DESIGN_DATA_CLEANUP.md  DOC_ARCHIVE_2026-05-19_DESIGN_GUI_WORKSPACE.md  DOC_DIRECT_2026-05-19_AUDIT-ALIGN.md  DOC_DIRECT_2026-05-19_TODO-uiState-workspace.md  README.md
repo_memo/: BACKUP_DIR_BUILDER_DESIGN.md  DESIGN_APPLY_OPS.md  DESIGN_AUDIT_LOGS_GOVERNANCE.md  DESIGN_BACKUP.md  DESIGN_BACKUP_DIR.md  DESIGN_BACKUP_OPS.md  DESIGN_BOOTSTRAP.md  DESIGN_COMM_PROTOCOL.md  DESIGN_COMPUTE_PREP_PAGE.md  DESIGN_CONFIG_INDEX_PROTOCOL.md  DESIGN_DATABASE_OPS.md  DESIGN_DATA_CLEANUP.md  DESIGN_ENGINE_INVARIANTS.md  DESIGN_EXECUTION_PLAN.md  DESIGN_EXT_RESOURCE.md  DESIGN_FOREST_MODEL.md  DESIGN_FRONTEND_LAYER_INDEPENDENCE.md  DESIGN_GUI.md  DESIGN_GUI_DATASOURCE_TAB.md  DESIGN_GUI_EXECUTION_PROTOCOL.md  DESIGN_GUI_GAP_CLOSURE.md  DESIGN_GUI_WORKSPACE.md  DESIGN_IGNORE_RULES.md  DESIGN_KMMIGNORE_RULES.md  DESIGN_MIGRATION_LAYERS.md  DESIGN_MOCK_INFRA.md  DESIGN_ORCHESTRATOR.md  DESIGN_ORCHESTRATOR_CONTRACT.md  (+38 more)
(+382 files in other folders)
