[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modmanager"
version = "0.1.0"
description = "File mapping and backup rule engine for workshop mods"
requires-python = ">=3.10"
dependencies = [
    "vdf>=0.4.0",
    "jsonschema>=3.2.0",
    "gitignore-parser>=0.1.0",
]

[project.scripts]
modmanager-cli = "modmanager.cli:main"
modmanager-web = "modmanager_web.__main__:main"

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
