[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modmgr"
version = "0.0.3"
description = "File mapping and backup rule engine for workshop mods"
requires-python = ">=3.10"
keywords = ["mod", "manager", "game", "backup"]
dependencies = [
    "vdf>=0.4.0",
    "jsonschema>=3.2.0",
    "gitignore-parser>=0.1.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.scripts]
modmgr-cli = "modmgr.cli:main"
modmgr-web = "modmgr_web.__main__:main"

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
modmgr_web = ["static/**/*"]

[project.urls]
Homepage = "https://github.com/Knighthana/modmanager"
Repository = "https://github.com/Knighthana/modmanager"
Issues = "https://github.com/Knighthana/modmanager/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
